# workspace

./: README.md
.devcontainer/: devcontainer.json
preempt/: CMakeLists.txt  README.md
preempt/cmake/: FindTensorRT.cmake
preempt/doc/: UserGuide(CN).md
preempt/docker/: Dockerfile
preempt/example/: example.cu
preempt/include/hook/: cuda_hook.h  cuda_subset.h  cufunc.h  cutable.h  macro_common.h  trace_profile.h
preempt/include/instrument/: instrument.h  mm.h
preempt/include/reef/: command.h  device_queue.h  host_queue.h  kernel_kill.h  reef.h  reef_hook.h  stream.h  utils.h
preempt/instrument/: CMakeLists.txt
preempt/instrument/idempotence-check/: CMakeLists.txt
preempt/instrument/idempotence-check/include/: callback.h  checker.h  cuda_hook.h  cutable.h  kernel.h  record.h  trace_profile.h
preempt/instrument/idempotence-check/src/: checker.cu  cuda_hook.cpp  inject.cu  kernel.cu  nvbit.cu
preempt/instrument/include/: instrument.h
preempt/instrument/sass-dump/: CMakeLists.txt
preempt/instrument/sass-dump/src/: nvbit.cu
preempt/instrument/src/: inject.cu  instrument_default.cu  instrument_sm70.cu  instrument_sm86.cu  nvbit.cu  utils.cu
preempt/instrument/tools/: .gitignore  inject_sm70.asm  inject_sm86.asm  nvbit_sm86.asm  test.cu
preempt/scheduler/: Cargo.toml
preempt/scheduler/cli/: Cargo.toml
preempt/scheduler/cli/src/: main.rs
preempt/scheduler/client/: Cargo.toml  build.rs
preempt/scheduler/client/src/: lib.rs  state.rs
preempt/scheduler/dummy/: client.cpp  client.h
preempt/scheduler/reef-sys/: Cargo.toml  build.rs  reef.h
preempt/scheduler/reef-sys/src/: lib.rs
preempt/scheduler/server/: Cargo.toml
preempt/scheduler/server/examples/: dummy_client.rs  priority.rs  simple.rs
preempt/scheduler/server/src/: lib.rs
preempt/scheduler/transport/: Cargo.toml
preempt/scheduler/transport/src/: lib.rs  msg.rs  socket.rs
preempt/src/: command.cpp  cuda_hook.cpp  device_queue.cpp  host_queue.cpp  instrument.cpp  kernel_kill.cpp  mm.cpp  reef.cpp  reef_hook.cpp  stream.cpp
preempt/test/: CMakeLists.txt
preempt/test/cuda/: CMakeLists.txt
preempt/test/cuda/src/: matrixmul.cu  preempt.cu
preempt/test/pytorch/: mnist.py
preempt/test/pytorch/classification/: .gitignore  README.md  train.py  train2.py  train_quantization.py  utils.py
preempt/test/scheduler/: CMakeLists.txt
preempt/test/scheduler/include/: model.h  tensor.h
preempt/test/scheduler/src/: main.cpp
preempt/test/tensorrt/: CMakeLists.txt
preempt/test/tensorrt/include/: test.h
preempt/test/tensorrt/models/: mobilenet.onnx
preempt/test/tensorrt/src/: main.cpp
preempt/tools/: analyze_kernel_param.py  onnx2trt.py  test-pytorch.sh
tensorrt_predict/: CMakeLists.txt  README.md
tensorrt_predict/include/: common.h  predict_api.h  trt_predict.h
tensorrt_predict/include/plugin/: plugin_factory.h  reshape.h
tensorrt_predict/scripts/: multiprocess_loadtest.sh
tensorrt_predict/src/: predict_api.cpp  trt_predict.cpp
tensorrt_predict/test/: CMakeLists.txt  loadtest.cpp  loadtest_thread.cpp  loadtest_thread.h  preempt.cpp  sample_test.cpp  thread.cpp  thread.h  utils.h
