[package]
name = "preempt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
crossbeam-channel = "0.5.6"
env_logger = { workspace = true }
log = { workspace = true }
reef_sys = { path = "../reef-sys" }
transport = { path = "../transport" }

[build-dependencies]
cbindgen = "0.24.3"
