[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = "0.6.9"
log = { workspace = true }
rkyv = { version = "0.7.39", features = ["validation", "size_64", "std"], default-features = false }
